# ClothesStore

./: .env.dev  .gitignore  README.md  docker-compose.yaml  pyproject.toml
Store/: settings.py  urls.py
api/: views.py
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_order_created.py
orders/templates/orders/: order-create.html  order.html  orders.html
products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
products/fixtures/: categories.json  goods.json
products/migrations/: 0001_initial.py  0002_basket.py  0003_rename_users_basket_user.py  0004_alter_product_options_alter_productcategory_options.py  0005_product_stripe_price_id.py
products/templates/products/: base.html  baskets.html  index.html  products.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_verified_email_emailverification.py
users/templates/users/: base.html  email_verification.html  login.html  profile.html  registration.html
